# aoc

./: .gitignore  LICENSE  README.md  pyproject.toml
src/2025/: 2025-01.py  2025-02.py  2025-03.py  2025-04.py  2025-05.py  2025-06.py  2025-07.py
src/aoc/: __main__.py  browse.py  template.py
