[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc"
version = "2025.1"
dependencies = ["httpx", "dotenv"]

[project.scripts]
aoc = "aoc.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
select = [
    "A",
    "B",
    "E",
    "F",
    "FLY",
    "NPY",
    "PD",
    "PERF",
    "PL",
    "RUF",
    "S",
    "UP",
    "W",
]
line-length = 120
