[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc"
version = "2025.1"
dependencies = ["httpx", "dotenv", "rich"]

[project.scripts]
aoc = "aoc.__main__:cli"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.ruff]
select = [
    "A",
    "B",
    "E",
    "F",
    "FLY",
    "I",
    "NPY",
    "PD",
    "PERF",
    "PL",
    "RUF",
    "S",
    "UP",
    "W",
]
ignore = ["PLR2004"]
line-length = 120
